Replaced div with footer tag on footer area. Updated CSS for footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,13 +192,16 @@ p {
     font-size: 36px;
 }
 
-.footer {
+/* footer class selector changed to footer element selector */
+/* ------------------------------------------------------------------------*/
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
+/* ------------------------------------------------------------------------*/
