Consolidated 3 services classes into a 'services-article' class and 3 benefits classes into a 'benefits-article' class as styling are same

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,10 @@ p {
     margin-left: 25px;
 }
 
-.search-engine-optimization {
+/* Consolidated search-engine-optimization, online-reputation-management, social-media-marketing classes 
+   into single 'services-article' class as the styling for all are same. */
+
+.services-article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -100,52 +103,18 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.services-article img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.services-article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-
+/* Consolidated benefit-lead, benefit-brand, benefit-cost classes into single 'benefits-article' class 
+   as the styling for all are same. */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -157,54 +126,21 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefits-article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefits-article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits-article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
 
 
 /* footer class selector changed to footer element selector */
